--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -101,6 +101,41 @@
       text-align: justify; /* 기본 텍스트 정렬 설정 */
   }
   
+ /* Qualification */
+  @media screen and (max-width: 992px) {
+    .qualification__container {
+        margin-left: auto;
+        margin-right: auto;
+    }
+  }
+  
+  /* For medium devices */
+  @media screen and (max-width: 768px) {
+    .qualification__container {
+        margin-left: var(--mb-1-5);
+        margin-right: var(--mb-1-5);
+    }
+  }
+  
+  @media screen and (max-width: 576px) {
+    .qualification__sections {
+        grid-template-columns: initial;
+    }
+  
+    .qualification__button {
+        margin: 0 var(--mb-0-75);
+    }
+  }
+  
+  /* For small devices */
+  @media screen and (max-width: 350px) {
+    .qualification__data {
+        gap: 0.5rem;
+    }
+  }
+
+  
+
   /* 핸드폰 화면 크기에서만 적용되는 스타일 */
   @media only screen and (max-width: 768px) {
       .text-container {
