--- a/style.css
+++ b/style.css
@@ -369,32 +369,42 @@ footer p {
 
 
 /* 연습*/
-
 .skillset {
-    display: flex;
-    flex-wrap: wrap; /* 요소가 넘치면 다음 줄로 넘어가도록 설정 */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  margin-bottom: 30px;
 }
 
 .skill-category {
-    flex: 0 0 100%; /* 각각의 상위 그룹이 전체 너비를 차지하도록 설정 */
-    margin-bottom: 20px; /* 각각의 상위 그룹 사이에 간격을 추가 */
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.category-title {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .skills {
-    margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 10px;
 }
 
 .skill-box {
-    display: inline-block;
-    padding: 5px 10px;
-    margin-right: 5px; 
-    margin-bottom: 5px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-style: italic;
-    color: #666;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-style: italic;
+  color: #666;
 }
+
 
 
 
@@ -476,22 +486,6 @@ footer p {
     margin-bottom: 10px;
 }
 
-.skills {
-    margin-top: 10px; /* Skills 위에 간격 추가 */
-}
-
-.skill-box {
-    display: inline-block;
-    padding: 5px 10px;
-    margin-right: 5px; /* Skills 간격을 좁게 조정 */
-    margin-bottom: 5px; /* Skills 간격을 좁게 조정 */
-    background-color: #f0f0f0; /* Skills box의 배경색을 회색 계열로 변경 */
-    border: 1px solid #ccc; /* Skills box의 테두리 색을 변경 */
-    border-radius: 5px;
-    font-style: italic;
-    color: #666;
-}
-
 /* project */
 
 #project-section {
@@ -535,3 +529,9 @@ footer p {
     font-size: 16px;
     margin-bottom: 10px;
 }
+
+.project-card a {
+  font-weight: bold;
+}
+
+
